# htbam_analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  utils.py
.github/workflows/: ci.yml
config_files/: kinetic_assay_times.yaml
dev/: full_processing.ipynb  processing_test.ipynb  stitch_test.ipynb
dev_notebooks/: 20221123_image_processing_experiment_day3.ipynb  20221130_chamber_finding_egfp-brightfield_image.ipynb  20221219_brightfield_chamber_mask_calculation.ipynb
htbam_analysis/: __init__.py  htbam_db_api.py
htbam_analysis/processing/: __init__.py  chip.py  chipcollections.py  org_extension.py
htbam_analysis/stitching/: __init__.py  background_images.py  file_handler.py  scripts.py  stitching_settings.py
htbam_analysis/stitching/rastering/: __init__.py  raster.py
notebooks/: analysis_only_template_august2023.ipynb  analysis_only_template_november2023.ipynb  analysis_template_august2023.ipynb  process_template_june2023.ipynb  process_template_nov2023.ipynb  stitch_template_june2023.ipynb  stitch_template_nov2023.ipynb
src/htbam_analysis/: __init__.py
src/htbam_analysis/analysis/: __init__.py  experiment.py  filter.py  filtering.py  fit.py  fitting.py  interactive.py  plot.py  plotting.py  transform.py
src/htbam_analysis/db_api/: csv_processing.py  data.py  htbam_db_api.py  io.py
src/htbam_analysis/db_api/units/: RFU.txt  __init__.py  units.py
src/htbam_analysis/processing/: __init__.py  chip.py  chipcollections.py  experiment.py  org_extension.py
src/htbam_analysis/scripts/: __init__.py  corner_picker.py  run_corner_picker.py
src/htbam_analysis/stitching/: __init__.py  background_images.py  file_handler.py  mm_file_handler.py  rastering.py  scripts.py  stitching.py
src/htbam_analysis/stitching/rastering/: raster.py  raster_params.py
temp/: process_nb_corner_picker.ipynb
test/: __init__.py  broken_test_stitch.py  test_binding_processing.py  test_feature_finding.py  test_fit.py  test_processing.ipynb  test_stitch.py  test_transform.py
test/test_data/: .gitattributes  dummy_pinlist.csv
test/test_data/button_quant/: .gitattributes  button_quant.csv
test/test_data/button_quant/20250207-011718-d3_0_4_ADPR_100AF_PostWash_Quant/3/StitchedImages/: BGSubtracted_StitchedImg_5_3_0.tif
test/test_data/chamber_quant/: .gitattributes  chamber_quant.csv
test/test_data/competitive_binding_mpro_adpr/: postwash_bait.csv.bz2  postwash_prey.csv.bz2  prewash_bait.csv.bz2
test/test_data/old/: d2_5_StandardSeries_Analysis.csv.bz2
test/test_data/poslists/: d3.pos
test/test_db_api/: __init__.py  test_api.py
(+65 files in other folders)
