[tool.poetry]
name = "htbam-analysis"
version = "1.2.1-alpha"
description = ""
authors = ["Nicholas-Freitas <nicholas.freitas@ucsf.edu>", "duncan-muir <muir.duncan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=1.26,<3"
scipy = ">=1.11,<2"
pandas = ">=2.1,<3"
matplotlib = ">=3.8,<4"
seaborn = ">=0.13,<0.14"
bokeh = ">=3.4,<4"
dash = ">=2.17,<3"
jupyterlab = ">=4,<5"
ipykernel = ">=6,<7"
ipywidgets = ">=8,<9"
opencv-python = ">=4.8,<5"
opencv-contrib-python = ">=4.8,<5"
scikit-image = ">=0.22,<1"
pillow = ">=10,<12"
tqdm = ">=4.64,<5"
basicpy = ">=1.1,<2"
hyperactive = "4.6.1"

[tool.poetry.scripts]
pick-corners = "htbam_analysis.scripts.run_corner_picker:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
