[tool.poetry]
name = "htbam-analysis"
version = "1.2.2-alpha"
description = ""
authors = ["duncan-muir <muir.duncan@gmail.com>", "Nicholas-Freitas <nicholas.freitas@ucsf.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.26.0"
opencv-python = ">=4.9.0"
opencv-contrib-python = ">=4.9.0"
ipywidgets = ">=8.1.0"
tqdm = ">=4.66.0"
pytest = ">=8.0.0"
basicpy = ">=1.1.0"
pillow = ">=10.2.0"
matplotlib = ">=3.8.0"
scikit-image = ">=0.22.0"
pandas = ">=2.2.0"
scipy = ">=1.11.0"
dash = ">=2.17.0"
seaborn = ">=0.13.2"
bokeh = ">=3.4.3"

[tool.poetry.scripts]
pick-corners = "htbam_analysis.scripts.run_corner_picker:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"